# arbitrage-system

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  config.yaml  run.sh  setup.sh  test.sh
.github/workflows/: code-analysis.yml  rust.yml
benches/: price_processing.rs
config/: basic_config.yaml  default.yaml
data/metrics/: price_history.json
src/: config.rs  lib.rs  main.rs  types.rs
src/alerts/: mod.rs
src/analysis/: mod.rs
src/api/: mod.rs
src/config/: app_config.rs  env_loader.rs  mod.rs
src/core/: app.rs  logger.rs  mod.rs  pairs.rs  types.rs
src/core/market_scanner/: mod.rs
src/core/opportunity_finder/: mod.rs
src/core/price_monitor/: mod.rs  websocket.rs
src/exchanges/: exchange_trait.rs  mod.rs  types.rs
src/exchanges/cex/: base.rs  binance.rs  bybit.rs  kucoin.rs  mod.rs
src/exchanges/cex/binance/: client.rs  mod.rs
src/exchanges/cex/kucoin/: mod.rs
src/exchanges/dex/: mod.rs
src/exchanges/types/: mod.rs
src/metrics/: mod.rs
src/monitoring/: mod.rs
src/notifications/: mod.rs
src/risk/: mod.rs
src/storage/: mod.rs
src/strategies/: mod.rs
src/tests/: mod.rs
src/utils/: constants.rs  error.rs  logger.rs  metrics.rs  mod.rs
