[package]
name = "arbitrage-system"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
teloxide = "0.12"
rust_decimal = "1.31"
rust_decimal_macros = "1.31"
url = "2.4"
web3 = "0.19"
