[package]
name = "arbitrage-system"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
rust_decimal = { version = "1.31", features = ["serde"] }
rust_decimal_macros = "1.31"
tokio-stream = "0.1"
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
env_logger = "0.10"
log = "0.4"
teloxide = { version = "0.12", features = ["macros"] }

[dev-dependencies]
tokio-test = "0.4"
mock-it = "0.4"
criterion = "0.5"
