[package]
name = "arbitrage-system"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "rt", "macros", "signal"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = { version = "1.32", features = ["serde"] }
rust_decimal_macros = "1.32"
chrono = "0.4"
colored = "2.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
crossterm = { version = "0.25", features = ["bracketed-paste"] }
rayon = "1.7"
ctrlc = "3.4"
once_cell = "1.18"

[lib]
name = "arbitrage_system"
path = "src/lib.rs"

[[bin]]
name = "arbitrage-system"
path = "src/main.rs"
